force-app/main/default/objects/DepositCash__c/DepositCash__c.object-meta.xml
<CustomObject>
    <label>Deposit+Cash</label>
    <nameField>
        <displayFormat>DPC-{000000}</displayFormat>
        <label>DEPOSIT+CASH ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deposit+Cash</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>