force-app/main/default/objects/DepositCash__c/fields/AmountOfInboundDepositUSDFormula__c.field-meta.xml
<CustomField>
    <fullName>AmountOfInboundDepositUSDFormula__c</fullName>
    <formula>Deposit__r.TotalAmountOfDepositFromCustomerUSD__c</formula>
    <label>AMOUNT OF INBOUND DEPOSIT(USD)-FORMU</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>