force-app/main/default/objects/DepositCash__c/fields/AmountOfOutboundDepositLocalFormula__c.field-meta.xml
<CustomField>
    <fullName>AmountOfOutboundDepositLocalFormula__c</fullName>
    <formula>Deposit__r.TotalAmountOfDepositToVendor__c</formula>
    <label>AMOUNT OF OUTBOUND DEPOSIT(LOCAL)-FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>