force-app/main/default/objects/DepositCash__c/fields/AmountOfOutboundDepositUSDFormula__c.field-meta.xml
<CustomField>
    <fullName>AmountOfOutboundDepositUSDFormula__c</fullName>
    <formula>Deposit__r.TotalAmountOfDepositToVendorUSD__c</formula>
    <label>AMOUNT OF OUTBOUND DEPOSIT(USD)-FORMU</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>