force-app/main/default/objects/DepositCash__c/fields/AmountPaidToVendorLocal__c.field-meta.xml
<CustomField>
    <fullName>AmountPaidToVendorLocal__c</fullName>
    <formula>Deposit__r.AmountPaidToVendorLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AMOUNT PAID TO VENDOR(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>