force-app/main/default/objects/DepositCash__c/fields/AmountPaidToVendorUSD__c.field-meta.xml
<CustomField>
    <fullName>AmountPaidToVendorUSD__c</fullName>
    <formula>Deposit__r.AmountPaidToVendor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AMOUNT PAID TO VENDOR(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>