force-app/main/default/objects/DepositCash__c/fields/AmountReceivedFromCustomerLocal__c.field-meta.xml
<CustomField>
    <fullName>AmountReceivedFromCustomerLocal__c</fullName>
    <formula>Deposit__r.AmountReceivedFromCustomerLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AMOUNT RECEIVED FROM CUSTOMER(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>