force-app/main/default/objects/DepositCash__c/fields/AmountReceivedFromCustomerUSD__c.field-meta.xml
<CustomField>
    <fullName>AmountReceivedFromCustomerUSD__c</fullName>
    <formula>Deposit__r.AmountReceivedFromCustomerUSD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AMOUNT RECEIVED FROM CUSTOMER(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>