force-app/main/default/objects/DepositCash__c/fields/Cash__c.field-meta.xml
<CustomField>
    <fullName>Cash__c</fullName>
    <label>CASH</label>
    <referenceTo>CASH_BOOK__c</referenceTo>
    <relationshipLabel>DEPOSIT+CASH</relationshipLabel>
    <relationshipName>DepositCash</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>