force-app/main/default/objects/DepositCash__c/fields/CashRollupStatus__c.field-meta.xml
<CustomField>
    <fullName>CashRollupStatus__c</fullName>
    <label>CASH ROLLUP STATUS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RECEIVABLE_PAYABLE_ROLLUP_STATUS</valueSetName>
    </valueSet>
</CustomField>