force-app/main/default/objects/DepositCash__c/fields/Deposit__c.field-meta.xml
<CustomField>
    <fullName>Deposit__c</fullName>
    <label>DEPOSIT</label>
    <referenceTo>Deposit__c</referenceTo>
    <relationshipLabel>DEPOSIT+CASH</relationshipLabel>
    <relationshipName>DepositCash</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>